@@ -1,5 +1,7 @@
-AUX 50color-moccur-gentoo.el 105 RMD160 5675caf3d0cb2ba7470045dbe3ac0e44a469cc56 SHA1 ad588c5e245325299853e918bdb48b13e8d3389d SHA256 f49d308b1ff717e3bc8b05a0773755bfcb908b3a19ae9935e85e92acfe85de87
+AUX 50color-moccur-gentoo.el 302 RMD160 8c226ec94220410e921fccbf4b8ebceeeea35db9 SHA1 540b381ea796c44cb9368db2f594c5cad5df5b40 SHA256 6ad66807b4766d47a73ff29a6ab1246ba096da842fce5a5ee058d864a4a89f06
 DIST color-moccur-2.25.el.bz2 20901 RMD160 c9d8c3e433601e440e3bca58c583a56cd7bae77c SHA1 61858670404ea1df1ee5d23b6e1b73151f92a32a SHA256 dda04c1e7c8bea00b0a4b89746a6af90dc00a1933b20c0a3e61664bb716cab57
+DIST color-moccur-2.41.el.bz2 21128 RMD160 0b7434762477209feea265421ff9561b65b25d62 SHA1 2c6caec65c037aec2f58bdb33c41a088e6606a0c SHA256 19dd8deac393100b9ca1c9900e57ca695a35f663b52f53896fc69d9608d529bd
 EBUILD color-moccur-2.25.ebuild 375 RMD160 a069a31940b13fb2e51e73bc398b611265263108 SHA1 b1b8a102c6319e6a15e70492e7d1af1444a0dc95 SHA256 17ebf0e15952990a9f9e133f7e9efd30776100d3e46a110093dd08eaa7989afb
-MISC ChangeLog 345 RMD160 7adeaae347262f55a5e7ad9e860ca32d66f295e2 SHA1 68a38f94c4d136343541ca968bbf467123cf64cb SHA256 17cbc2440a1ce30dcf49b49a728a79adc8e5c59ff0a85ef783f708031e2c0e09
+EBUILD color-moccur-2.41.ebuild 485 RMD160 27e30f387b95c3c0b9db6767fc99cda71b2ae284 SHA1 32ca991d17c31de66aace78a1aeca361ba3a982e SHA256 757d8ce4da87508317d13385c8641fcf546085899c1fd7e397a7c27fa82e93fb
+MISC ChangeLog 512 RMD160 ba0318414ee961c1b83409a3343a6b3821efd40a SHA1 70e4d46304a6279b6331b03e5d78b7f8376ccc90 SHA256 c0a814bc5bd4753e766778ebdc044ca6e3afc6ba82d79e6589d886a4dc4fc88b
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
